--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,44 +1,56 @@
+# 工作流名称，可自定义
 name: Android CI - Gradle build
 
-on:
-  workflow_dispatch:
-    inputs:
-      build_type:
-        description: 'build type (debug or release)'
-        required: false
-        default: 'debug'
-  push:
-    branches:
-      - main
+# 核心：定义工作流，这是之前缺失的关键配置
+workflows:
+  # 单个工作流的名称，可按需修改
+  android_gradle_build:
+    # 触发条件配置
+    triggers:
+      # 手动触发（在 Codemagic 界面手动选择执行）
+      workflow_dispatch:
+        inputs:
+          build_type:
+            description: 'build type (debug or release)'
+            required: false
+            default: 'debug'
+      # 代码推送到 main 分支时自动触发
+      push:
+        branches:
+          - main
 
-env:
-  NODE_VERSION: 18
-  ANDROID_API_LEVEL: 33
-  BUILD_TOOLS_VERSION: '33.0.2'
+    # 环境变量配置
+    env:
+      NODE_VERSION: 18
+      ANDROID_API_LEVEL: 33
+      BUILD_TOOLS_VERSION: '33.0.2'
 
-jobs:
-  android-build:
+    # 执行的操作系统
     runs-on: ubuntu-latest
-    timeout-minutes: 120
 
+    # 构建步骤
     steps:
+      # 检出代码仓库
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
+      # 配置 Node.js 环境
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
 
-      - name: Cache npm
+      # 缓存 npm 依赖，加速后续构建
+      - name: Cache npm dependencies
         uses: actions/cache@v4
         with:
           path: ~/.npm
           key: npm-cache-${{ runner.os }}-${{ hashFiles('**/package-lock.json') }}
           restore-keys: npm-cache-${{ runner.os }}-
 
+      # 安装 npm 依赖
       - name: Install npm dependencies
         run: |
           if [ -f package-lock.json ]; then
@@ -47,26 +59,26 @@ jobs:
             npm install
           fi
 
+      # 配置 Java 环境（Temurin 17）
       - name: Setup Java (Temurin 17)
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '17'
 
+      # 确保 Android SDK 路径存在并配置
       - name: Ensure Android SDK root exists
         run: |
           if [ -d "/usr/local/lib/android/sdk" ]; then
-            echo "ANDROID_SDK_ROOT=/usr/local/lib/android/sdk"
             echo "ANDROID_SDK_ROOT=/usr/local/lib/android/sdk" >> $GITHUB_ENV
           elif [ -d "$HOME/Android/Sdk" ]; then
-            echo "ANDROID_SDK_ROOT=$HOME/Android/Sdk"
             echo "ANDROID_SDK_ROOT=$HOME/Android/Sdk" >> $GITHUB_ENV
           else
-            echo "No preinstalled Android SDK found. Creating ANDROID_SDK_ROOT at $HOME/android-sdk"
             mkdir -p $HOME/android-sdk
             echo "ANDROID_SDK_ROOT=$HOME/android-sdk" >> $GITHUB_ENV
           fi
 
+      # 安装 Android 命令行工具和必要 SDK 组件
       - name: Install Android commandline tools and SDK components
         env:
           ANDROID_SDK_ROOT: ${{ env.ANDROID_SDK_ROOT }}
@@ -74,7 +86,6 @@ jobs:
         run: |
           set -e
           if [ ! -x "$ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager" ]; then
-            echo "cmdline-tools not found. Downloading..."
             mkdir -p $ANDROID_SDK_ROOT/cmdline-tools
             cd /tmp
             curl -sS -L "https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip" -o cmdline-tools.zip
@@ -88,6 +99,7 @@ jobs:
           yes | sdkmanager --licenses || true
           sdkmanager "platform-tools" "platforms;android-${{ env.ANDROID_API_LEVEL }}" "build-tools;${{ env.BUILD_TOOLS_VERSION }}" || true
 
+      # 为 Android 构建准备 JS  bundle
       - name: Prepare JS bundle for Android
         run: |
           set -e
@@ -99,6 +111,7 @@ jobs:
         env:
           NODE_ENV: production
 
+      # 使用 Gradle 执行构建
       - name: Build with Gradle
         working-directory: android
         run: |
@@ -112,6 +125,7 @@ jobs:
             ./gradlew clean assembleDebug --stacktrace --no-daemon
           fi
 
+      # 上传构建生成的 APK 作为产物
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
         with:
